--- a/config.yaml
+++ b/config.yaml
@@ -24,7 +24,7 @@ params:
         title: Email address
     enable: yes
     phone:
-      - phone: +44 7879999570 
+      - phone: 
         title: 
   custom_css: []
   custom_js: []
@@ -41,18 +41,9 @@ params:
         text: ''
         url: https://www.london.edu
     social:
-      - icon: fa-twitter
-        label: Twitter
-        url: https://www.twitter.com
-      - icon: fa-facebook
-        label: Facebook
-        url: https://www.facebook.com
-      - icon: fa-instagram
-        label: Instagram
-        url: https://www.instagram.com
       - icon: fa-github
         label: GitHub
-        url: https://www.github.com
+        url: https://github.com/BhavyaKapur24/
       - icon: fa-linkedin
         label: LinkedIn
         url: https://www.linkedin.com/in/BhavyaKapur/
@@ -62,18 +53,18 @@ params:
     button1:
       - name: Get Started
         url: blogs
-    button2:
-      - name: Log In
-        url: '#'
+    # button2:
+     # - name: Log In
+     #   url: '#'
     links:
       - name: Home
         url: '#'
-      - name: Blogs
-        url: blogs
-      - name: Generic Blog
-        url: blogs/ipsum
-      - name: Elements
-        url: elements.html
+      # - name: Blogs
+      #  url: blogs
+   #   - name: Generic Blog
+    #    url: blogs/ipsum
+     # - name: Elements
+      #  url: elements.html
     menu: Menu
     subtitle: By HTML5 Up
     title: Analytics Mania
@@ -82,19 +73,19 @@ params:
     showcase:
       - image: delhi.jpeg
         subtitle: 
-        title: My Journey
+        title: About me
         url: blogs/aliquam
       - image: pic02.jpg
-        subtitle: Feugiat Amet Tempus
+       # subtitle: 
         title: Youth Risk Behavior Surveillance 
         url: blogs/magna
-      - image: pic03.jpg
-        subtitle: Differences between directors
+      - image: pay gap.jpg
+       # subtitle: 
         url: blogs/xyz
-        title: IMDB ratings
+        title: Gender Pay Gap
       - image: cryptocurrencies.jpg
-        subtitle: 
-        title: The Future of Cryptocurrencies
+      #  subtitle: 
+        title: Should you invest in Cryptocurrency? 
         url: blogs/ipsum
   two:
     buttonText: Get Started
