--- a/config.yaml
+++ b/config.yaml
@@ -75,7 +75,7 @@ params:
         subtitle: 
         title: About me
         url: blogs/aliquam
-      - image: pic02.jpg
+      - image: youth.jpg
        # subtitle: 
         title: Youth Risk Behavior Surveillance 
         url: blogs/magna
